RESOLVED FIXED196777
Unable to run system Safari with trunk WebKit
https://bugs.webkit.org/show_bug.cgi?id=196777
Summary Unable to run system Safari with trunk WebKit
Chris Dumez
Reported 2019-04-10 11:59:15 PDT
Unable to run system Safari with trunk WebKit: SafariForWebKitDevelopment[644:9602] *** Terminating app due to uncaught exception 'NSInvalidArgumentException', reason: 'Related web view <WKWebView: 0x7fbc8752ce00> has data store <WKWebsiteDataStore: 0x7fbc872856e0> but configuration specifies a different data store <WKWebsiteDataStore: 0x7fbc87562590>'
Attachments
Patch (7.44 KB, patch)
2019-04-10 12:33 PDT, Chris Dumez
no flags
Patch (7.46 KB, patch)
2019-04-10 13:09 PDT, Chris Dumez
no flags
Patch (14.31 KB, patch)
2019-04-10 20:47 PDT, Chris Dumez
no flags
Patch (14.28 KB, patch)
2019-04-10 21:10 PDT, Chris Dumez
no flags
Patch (15.42 KB, patch)
2019-04-10 22:10 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.74 MB, application/zip)
2019-04-11 00:05 PDT, EWS Watchlist
no flags
Patch (10.75 KB, patch)
2019-04-11 14:57 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-04-10 12:00:03 PDT
Chris Dumez
Comment 2 2019-04-10 12:33:22 PDT
Alex Christensen
Comment 3 2019-04-10 13:06:34 PDT
Comment on attachment 367147 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=367147&action=review > Source/WebKit/UIProcess/Cocoa/VersionChecks.h:46 > +#define DYLD_MACOS_VERSION_FIRST_WITH_EXCEPTIONS_FOR_RELATED_WEBVIEWS_USING_DIFFERENT_DATA_STORES 0 I don't think this will fix our open source friends' problem. We need to define the last version and use DYLD_MACOSX_VERSION_10_14 > Source/WebKit/UIProcess/Cocoa/VersionChecks.h:86 > +enum class AssumeSafariIsAlwaysLinkedOnAfter { No, Yes }; : bool
Chris Dumez
Comment 4 2019-04-10 13:07:56 PDT
(In reply to Alex Christensen from comment #3) > Comment on attachment 367147 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=367147&action=review > > > Source/WebKit/UIProcess/Cocoa/VersionChecks.h:46 > > +#define DYLD_MACOS_VERSION_FIRST_WITH_EXCEPTIONS_FOR_RELATED_WEBVIEWS_USING_DIFFERENT_DATA_STORES 0 > > I don't think this will fix our open source friends' problem. We need to > define the last version and use DYLD_MACOSX_VERSION_10_14 I believe it works because of the change I made to linkedOnAfter which special-cases 0 as sdkVersion. > > > Source/WebKit/UIProcess/Cocoa/VersionChecks.h:86 > > +enum class AssumeSafariIsAlwaysLinkedOnAfter { No, Yes }; > > : bool
Chris Dumez
Comment 5 2019-04-10 13:08:31 PDT
(In reply to Chris Dumez from comment #4) > (In reply to Alex Christensen from comment #3) > > Comment on attachment 367147 [details] > > Patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=367147&action=review > > > > > Source/WebKit/UIProcess/Cocoa/VersionChecks.h:46 > > > +#define DYLD_MACOS_VERSION_FIRST_WITH_EXCEPTIONS_FOR_RELATED_WEBVIEWS_USING_DIFFERENT_DATA_STORES 0 > > > > I don't think this will fix our open source friends' problem. We need to > > define the last version and use DYLD_MACOSX_VERSION_10_14 > > I believe it works because of the change I made to linkedOnAfter which > special-cases 0 as sdkVersion. As it is working for me without internal changes.
Chris Dumez
Comment 6 2019-04-10 13:09:30 PDT
Chris Dumez
Comment 7 2019-04-10 13:10:09 PDT
Comment on attachment 367149 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=367149&action=review > Source/WebKit/ChangeLog:20 > + - In the header, DYLD_IOS_VERSION_* / DYLD_MACOS_VERSION_* constants are 0 when building with the I explained this in the Changelog here.
WebKit Commit Bot
Comment 8 2019-04-10 13:44:39 PDT
Comment on attachment 367149 [details] Patch Clearing flags on attachment: 367149 Committed r244146: <https://trac.webkit.org/changeset/244146>
WebKit Commit Bot
Comment 9 2019-04-10 13:44:41 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 10 2019-04-10 16:57:36 PDT
Reverted r244146 for reason: Caused a few DeviceOrientation API test failures on iOS Committed r244170: <https://trac.webkit.org/changeset/244170>
Chris Dumez
Comment 11 2019-04-10 20:47:11 PDT
Chris Dumez
Comment 12 2019-04-10 21:10:19 PDT
Chris Dumez
Comment 13 2019-04-10 22:10:38 PDT
EWS Watchlist
Comment 14 2019-04-11 00:05:29 PDT
Comment on attachment 367202 [details] Patch Attachment 367202 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/11838498 New failing tests: fast/device-orientation/device-orientation-request-permission-granted.html fast/device-orientation/device-motion-request-permission-denied.html fast/device-orientation/device-motion-request-permission-granted.html fast/device-orientation/device-orientation-request-permission-user-gesture.html http/tests/events/device-orientation-motion-secure-context.html fast/device-orientation/device-orientation-request-permission-denied.html fast/device-orientation/device-motion-request-permission-user-gesture.html
EWS Watchlist
Comment 15 2019-04-11 00:05:31 PDT
Created attachment 367208 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Chris Dumez
Comment 16 2019-04-11 14:57:23 PDT
WebKit Commit Bot
Comment 17 2019-04-11 16:43:16 PDT
Comment on attachment 367246 [details] Patch Clearing flags on attachment: 367246 Committed r244203: <https://trac.webkit.org/changeset/244203>
WebKit Commit Bot
Comment 18 2019-04-11 16:43:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.